fix(Field): input slot should align center

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -17,6 +17,7 @@
   &__body {
     display: flex;
     align-items: center;
+    height: 100%;
   }
 
   &__control {
